@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2019 IBM Corporation and others.
+ * Copyright (c) 2000, 2019, 2024 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -11,14 +11,13 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Stephan Herrmann <stephan@cs.tu-berlin.de> - Contribution for bug 185682 - Increment/decrement operators mark local variables as read
+ *     Nikifor Fedorov <nikifor.fedorov@arsysop.ru> - Bug #2758 - expected compiler outputs extended with 1.8 warnings
  *******************************************************************************/
 package org.eclipse.jdt.core.tests.compiler.regression;
 
 import java.io.File;
 import java.util.Map;
-
 import junit.framework.Test;
-
 import org.eclipse.jdt.core.ToolFactory;
 import org.eclipse.jdt.core.tests.util.Util;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
@@ -47,7 +46,7 @@ protected Map getCompilerOptions() {
 	return options;
 }
 public static Test suite() {
-		return buildUniqueComplianceTestSuite(testClass(), ClassFileConstants.JDK1_4);
+		return buildUniqueComplianceTestSuite(testClass(), CompilerOptions.getFirstSupportedJdkLevel());
 }
 public static Class testClass() {
 	return Compliance_1_4.class;
@@ -2068,12 +2067,7 @@ public void test063() {
 			"	}	\n"+
 			"}	\n",
 		},
-		"----------\n" +
-		"1. ERROR in p1\\X.java (at line 5)\n" +
-		"	Z(){	\n" +
-		"	^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n"
+		""
 	);
 }
 
@@ -2098,12 +2092,7 @@ public void test064() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in Foo.java (at line 10)\n" +
-		"	public Baz() {\n" +
-		"	       ^^^^^\n" +
-		"No enclosing instance of type Foo is available due to some intermediate constructor invocation\n" +
-		"----------\n");
+		"");
 }
 
 public void test065() {
@@ -2129,12 +2118,7 @@ public void test065() {
 			"	}	\n"+
 			"}	\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 9)\n" +
-		"	Z(){	\n" +
-		"	^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n");
+		"");
 }
 
 /*
@@ -2158,11 +2142,6 @@ public void test066() {
 		},
 		"----------\n" +
 		"1. ERROR in X.java (at line 8)\n" +
-		"	super(new M(){});\n" +
-		"	      ^^^^^^^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 8)\n" +
 		"	super(new M(){});\n" +
 		"	          ^^^\n" +
 		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
@@ -2195,17 +2174,7 @@ public void test067() {
 			"}\n",
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 11)\n" +
-		"	super(null); //1\n" +
-		"	^^^^^^^^^^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 14)\n" +
-		"	super(new M());//2\n" +
-		"	^^^^^^^^^^^^^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n" +
-		"3. ERROR in X.java (at line 14)\n" +
+		"1. ERROR in X.java (at line 14)\n" +
 		"	super(new M());//2\n" +
 		"	      ^^^^^^^\n" +
 		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
@@ -2234,12 +2203,7 @@ public void test068() {
 			"	}\n" +
 			"}\n",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 8)\n" +
-		"	super();	// ko\n" +
-		"	^^^^^^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n");
+		"");
 }
 
 /*
@@ -2270,15 +2234,10 @@ public void test069() {
 		"----------\n" +
 		"1. ERROR in X.java (at line 8)\n" +
 		"	super(new MX4());	// ko\n" +
-		"	^^^^^^^^^^^^^^^^^\n" +
-		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 8)\n" +
-		"	super(new MX4());	// ko\n" +
 		"	      ^^^^^^^^^\n" +
 		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
 		"----------\n" +
-		"3. ERROR in X.java (at line 14)\n" +
+		"2. ERROR in X.java (at line 14)\n" +
 		"	this(new MX4());		// ko\n" +
 		"	     ^^^^^^^^^\n" +
 		"No enclosing instance of type X is available due to some intermediate constructor invocation\n" +
@@ -2595,9 +2554,56 @@ public void test078() {
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=47227
  */
 public void test079() {
+	String problemLog = (this.complianceLevel >= ClassFileConstants.JDK23) ?
+			"""
+			----------
+			1. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable
+			----------
+			2. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly Declared class must have a candidate main method
+			----------
+			3. ERROR in X.java (at line 4)
+				return blah;
+				       ^^^^
+			blah cannot be resolved to a variable
+			----------
+			""" :
+			"""
+			----------
+			1. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 23 and above
+			----------
+			2. ERROR in X.java (at line 1)
+				void ___eval() {
+				^
+			Implicitly declared class must have a candidate main method
+			----------
+			3. ERROR in X.java (at line 4)
+				return blah;
+				       ^^^^
+			blah cannot be resolved to a variable
+			----------
+			""";
+
+	if (this.complianceLevel < ClassFileConstants.JDK16) {
+		problemLog += """
+			4. ERROR in X.java (at line 14)
+				public static void main(String[] args) {
+				                   ^^^^^^^^^^^^^^^^^^^
+			The method main cannot be declared static; static methods can only be declared in a static or top level type
+			----------
+			""";
+	}
 	this.runNegativeTest(
 		new String[] {
-			"Hello.java",
+			"X.java",
 			"void ___eval() {\n" +
 			"	new Runnable() {\n" +
 			"		int ___run() throws Throwable {\n" +
@@ -2608,7 +2614,7 @@ public void test079() {
 			"		}\n" +
 			"	};\n" +
 			"}\n" +
-			"public class Hello {\n" +
+			"public class X {\n" +
 			"	private static int x;\n" +
 			"	private String blah;\n" +
 			"	public static void main(String[] args) {\n" +
@@ -2622,30 +2628,15 @@ public void test079() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in Hello.java (at line 1)\n" +
-		"	void ___eval() {\n" +
-		"	^^^^^^^^^^^^^^\n" +
-		"Syntax error on tokens, delete these tokens\n" +
-		"----------\n" +
-		"2. ERROR in Hello.java (at line 2)\n" +
-		"	new Runnable() {\n" +
-		"		int ___run() throws Throwable {\n" +
-		"			return blah;\n" +
-		"		}\n" +
-		"		private String blarg;\n" +
-		"		public void run() {\n" +
-		"		}\n" +
-		"	};\n" +
-		"}\n" +
-		"	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Syntax error on tokens, delete these tokens\n" +
-		"----------\n"
+		problemLog
 	);
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=67643
  * from 1.5 source level on most specific common super type is allowed
+ *
+ * Seems to be a bug fixed in JDK 6 hence the test needs to be removed:
+ * https://bugs.java.com/bugdatabase/view_bug?bug_id=5080917
  */
 public void test080() {
 	this.runNegativeTest(
@@ -2669,15 +2660,35 @@ public void test080() {
 		"	                     ^^\n" +
 		"The serializable class C1 does not declare a static final serialVersionUID field of type long\n" +
 		"----------\n" +
-		"2. WARNING in X.java (at line 5)\n" +
+		"2. WARNING in X.java (at line 3)\n" +
+		"	private static class C1 extends ArrayList {\n" +
+		"	                                ^^^^^^^^^\n" +
+		"ArrayList is a raw type. References to generic type ArrayList<E> should be parameterized\n" +
+		"----------\n" +
+		"3. WARNING in X.java (at line 5)\n" +
 		"	private static class C2 extends ArrayList {\n" +
 		"	                     ^^\n" +
 		"The serializable class C2 does not declare a static final serialVersionUID field of type long\n" +
 		"----------\n" +
-		"3. ERROR in X.java (at line 8)\n" +
+		"4. WARNING in X.java (at line 5)\n" +
+		"	private static class C2 extends ArrayList {\n" +
+		"	                                ^^^^^^^^^\n" +
+		"ArrayList is a raw type. References to generic type ArrayList<E> should be parameterized\n" +
+		"----------\n" +
+		"5. WARNING in X.java (at line 8)\n" +
 		"	ArrayList list = args == null ? new C1(): new C2();\n" +
-		"	                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
-		"Incompatible conditional operand types X.C1 and X.C2\n" +
+		"	^^^^^^^^^\n" +
+		"ArrayList is a raw type. References to generic type ArrayList<E> should be parameterized\n" +
+		"----------\n" +
+		"6. WARNING in X.java (at line 8)\n" +
+		"	ArrayList list = args == null ? new C1(): new C2();\n" +
+		"	                                ^^^^^^^^\n" +
+		"Access to enclosing constructor X.C1() is emulated by a synthetic accessor method\n" +
+		"----------\n" +
+		"7. WARNING in X.java (at line 8)\n" +
+		"	ArrayList list = args == null ? new C1(): new C2();\n" +
+		"	                                          ^^^^^^^^\n" +
+		"Access to enclosing constructor X.C2() is emulated by a synthetic accessor method\n" +
 		"----------\n");
 }
 public void test081() {
@@ -2691,12 +2702,7 @@ public void test081() {
 			"    public Y foo() { return this; } \n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 5)\n" +
-		"	public Y foo() { return this; } \n" +
-		"	       ^\n" +
-		"The return type is incompatible with X.foo()\n" +
-		"----------\n");
+		"");
 }
 // covariance
 public void test082() {
@@ -2720,12 +2726,7 @@ public void test082() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 13)\n" +
-		"	String foo() {\n" +
-		"	^^^^^^\n" +
-		"The return type is incompatible with X.foo()\n" +
-		"----------\n");
+		"");
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=66533
@@ -2741,10 +2742,10 @@ public void test084() {
 			"}\n"
 		},
 		"----------\n" +
-		"1. WARNING in X.java (at line 3)\n" +
+		"1. ERROR in X.java (at line 3)\n" +
 		"	Object enum = null;\n" +
 		"	       ^^^^\n" +
-		"\'enum\' should not be used as an identifier, since it is a reserved keyword from source level 1.5 on\n" +
+		"Syntax error on token \"enum\", delete this token\n" +
 		"----------\n");
 }
 /**
@@ -2766,22 +2767,19 @@ public void test085() {
 				"	public static int in;\n" +
 				"}\n"
 		},
-		"----------\n" +
-			"1. ERROR in A.java (at line 1)\n" +
-			"	import static j.l.S.*;\n" +
-			"	^^^^^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
-			"----------\n" +
-			"2. ERROR in A.java (at line 2)\n" +
-			"	import static j.l.S.in;\n" +
-			"	^^^^^^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
-			"----------\n" +
-			"3. ERROR in A.java (at line 2)\n" +
-			"	import static j.l.S.in;\n" +
-			"	              ^^^^^^^^\n" +
-			"The import j.l.S.in cannot be resolved\n" +
-			"----------\n"
+		"""
+		----------
+		1. WARNING in A.java (at line 1)
+			import static j.l.S.*;
+			              ^^^^^
+		The import j.l.S is never used
+		----------
+		2. WARNING in A.java (at line 2)
+			import static j.l.S.in;
+			              ^^^^^^^^
+		The import j.l.S.in is never used
+		----------
+		"""
 		);
 }
 /**
@@ -2808,8 +2806,8 @@ public void test086() {
 		"----------\n" +
 			"1. ERROR in X.java (at line 1)\n" +
 			"	import static p.S;\n" +
-			"	^^^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
+			"	              ^^^\n" +
+			"The static import p.S must be a field or member type\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	System.out.print(full+\" \"+p.S.success);\n" +
@@ -2838,15 +2836,10 @@ public void test087() {
 		"----------\n" +
 			"1. ERROR in X.java (at line 1)\n" +
 			"	import static S;\n" +
-			"	^^^^^^^^^^^^^^^^\n" +
-			"Syntax error, static imports are only available if source level is 1.5 or greater\n" +
-			"----------\n" +
-			"2. ERROR in X.java (at line 1)\n" +
-			"	import static S;\n" +
 			"	              ^\n" +
 			"The import S cannot be resolved\n" +
 			"----------\n" +
-			"3. ERROR in X.java (at line 5)\n" +
+			"2. ERROR in X.java (at line 5)\n" +
 			"	System.out.print(full+\" \"+S.success);\n" +
 			"	                 ^^^^\n" +
 			"full cannot be resolved to a variable\n" +
@@ -2920,6 +2913,31 @@ public void test088() {
 		"	private void a() { System.out.println(\"A\");} \n" +
 		"	             ^^^\n" +
 		"The method a() from the type X is never used locally\n" +
+		"----------\n" +
+		"4. WARNING in p\\X.java (at line 31)\n" +
+		"	Class c = b.getClass();\n" +
+		"	^^^^^\n" +
+		"Class is a raw type. References to generic type Class<T> should be parameterized\n" +
+		"----------\n" +
+		"5. WARNING in p\\X.java (at line 32)\n" +
+		"	Class _getClasses [] = X.class.getClasses(); \n" +
+		"	^^^^^\n" +
+		"Class is a raw type. References to generic type Class<T> should be parameterized\n" +
+		"----------\n" +
+		"6. WARNING in p\\X.java (at line 36)\n" +
+		"	Constructor _getConstructors[] = c.getConstructors(); \n" +
+		"	^^^^^^^^^^^\n" +
+		"Constructor is a raw type. References to generic type Constructor<T> should be parameterized\n" +
+		"----------\n" +
+		"7. WARNING in p\\X.java (at line 39)\n" +
+		"	Method _getMethod = c.getMethod(\"d\",null);\n" +
+		"	                    ^^^^^^^^^^^^^^^^^^^^^\n" +
+		"Type null of the last argument to method getMethod(String, Class...) doesn\'t exactly match the vararg parameter type. Cast to Class[] to confirm the non-varargs invocation, or pass individual arguments of type Class for a varargs invocation.\n" +
+		"----------\n" +
+		"8. WARNING in p\\X.java (at line 39)\n" +
+		"	Method _getMethod = c.getMethod(\"d\",null);\n" +
+		"	                    ^^^^^^^^^^^^^^^^^^^^^\n" +
+		"Type safety: The method getMethod(String, Class...) belongs to the raw type Class. References to generic type Class<T> should be parameterized\n" +
 		"----------\n");
 }
 /*
@@ -2939,12 +2957,7 @@ public void test089() {
 			"    }\n" +
 			"}"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 2)\r\n" +
-		"	@interface I1 {}\r\n" +
-		"	           ^^\n" +
-		"Syntax error, annotation declarations are only available if source level is 1.5 or greater\n" +
-		"----------\n");
+		"");
 }
 //78104
 public void test090() {
@@ -2961,12 +2974,7 @@ public void test090() {
 			"}",
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 4)\n" +
-		"	ints = ints.clone();\n" +
-		"	       ^^^^^^^^^^^^\n" +
-		"Type mismatch: cannot convert from Object to int[]\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 6)\n" +
+		"1. ERROR in X.java (at line 6)\n" +
 		"	X x = this.clone();\n" +
 		"	      ^^^^^^^^^^^^\n" +
 		"Type mismatch: cannot convert from Object to X\n" +
@@ -2985,12 +2993,7 @@ public void test091() {
 			"	}\n" +
 			"}",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 4)\r\n" +
-		"	args = args.clone();\r\n" +
-		"	       ^^^^^^^^^^^^\n" +
-		"Type mismatch: cannot convert from Object to String[]\n" +
-		"----------\n"
+		""
 	);
 }
 // check autoboxing only enabled in 5.0 source mode
@@ -3006,12 +3009,7 @@ public void test092() {
 			"	}\n" +
 			"}\n",
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 3)\n" +
-		"	if (b) { \n" +
-		"	    ^\n" +
-		"Type mismatch: cannot convert from Boolean to boolean\n" +
-		"----------\n"
+		""
 	);
 }
 public void test093() {
@@ -3065,8 +3063,8 @@ public void test093() {
 		"----------\n" +
 		"1. ERROR in p\\X_1.java (at line 33)\n" +
 		"	f1=(f1==0.0)?1.0:f1;\n" +
-		"	   ^^^^^^^^^\n" +
-		"Incompatible operand types Float and double\n" +
+		"	   ^^^^^^^^^^^^^^^^\n" +
+		"Type mismatch: cannot convert from double to Float\n" +
 		"----------\n"
 	);
 }
@@ -3090,8 +3088,8 @@ public void test094(){
 		"----------\n" +
 		"1. ERROR in X.java (at line 4)\n" +
 		"	()\n" +
-		"	^^\n" +
-		"Syntax error on tokens, delete these tokens\n" +
+		"	^\n" +
+		"Syntax error on token \"(\", AnnotationName expected before this token\n" +
 		"----------\n");
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=84743
@@ -3121,12 +3119,7 @@ public void test095(){
 			"  }\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 15)\n" +
-		"	J j = (J) i;\n" +
-		"	      ^^^^^\n" +
-		"Cannot cast from I to J\n" +
-		"----------\n");
+		"");
 }
 /*
  * https://bugs.eclipse.org/bugs/show_bug.cgi?id=47074
@@ -3155,12 +3148,7 @@ public void test096() {
 			"    }\n" +
 			"}"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 17)\n" +
-		"	C c = (C)a; //COMPILER ERROR\n" +
-		"	      ^^^^\n" +
-		"Cannot cast from X.A to X.C\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=79396
 public void test097() {
@@ -3218,12 +3206,7 @@ public void test098() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 6)\n" +
-		"	String this$0;\n" +
-		"	       ^^^^^^\n" +
-		"Duplicate field X.Y.this$0\n" +
-		"----------\n");
+		"");
 }
 
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=77349
@@ -3258,15 +3241,10 @@ public void test100() {
 			"}\n"
 		},
 		"----------\n" +
-		"1. ERROR in X.java (at line 2)\n" +
+		"1. WARNING in X.java (at line 4)\n" +
 		"	int \\ud800\\udc05\\ud800\\udc04\\ud800\\udc03\\ud800\\udc02\\ud800\\udc01\\ud800\\udc00;\n" +
-		"	    ^^^^^^\n" +
-		"Invalid unicode\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 4)\n" +
-		"	int \\ud800\\udc05\\ud800\\udc04\\ud800\\udc03\\ud800\\udc02\\ud800\\udc01\\ud800\\udc00;\n" +
-		"	    ^^^^^^\n" +
-		"Invalid unicode\n" +
+		"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+		"The local variable \ud800\udc05\ud800\udc04\ud800\udc03\ud800\udc02\ud800\udc01\ud800\udc00 is hiding a field from type X\n" +
 		"----------\n"
 	);
 }
@@ -3287,27 +3265,7 @@ public void test101() {
 			"	}\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 2)\n" +
-		"	Character c0 = \'a\';\n" +
-		"	               ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"2. ERROR in X.java (at line 5)\n" +
-		"	c1 = \'b\';\n" +
-		"	     ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"3. ERROR in X.java (at line 7)\n" +
-		"	Character c2 = \'c\';\n" +
-		"	               ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n" +
-		"4. ERROR in X.java (at line 8)\n" +
-		"	Character[] c3 = { \'d\' };\n" +
-		"	                   ^^^\n" +
-		"Type mismatch: cannot convert from char to Character\n" +
-		"----------\n"
+		""
 	);
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=108856
@@ -3329,7 +3287,7 @@ public void test102() {
 			"	}\n" +
 			"}\n"
 		},
-		"X$2");
+		"X$1$1");
 }
 public void test103() throws Exception {
 	this.runConformTest(
@@ -3352,52 +3310,34 @@ public void test103() throws Exception {
 			ClassFileBytesDisassembler.DETAILED);
 
 	String expectedOutput =
-		"// Compiled from X.java (version 1.4 : 48.0, super bit)\n" +
-		"public class X {\n" +
-		"  \n" +
-		"  // Field descriptor #6 Ljava/lang/Class;\n" +
-		"  static synthetic java.lang.Class class$0;\n" +
-		"  \n" +
-		"  // Method descriptor #9 ()V\n" +
-		"  // Stack: 1, Locals: 1\n" +
-		"  public X();\n" +
-		"    0  aload_0 [this]\n" +
-		"    1  invokespecial java.lang.Object() [11]\n" +
-		"    4  return\n" +
-		"      Line numbers:\n" +
-		"        [pc: 0, line: 1]\n" +
-		"      Local variable table:\n" +
-		"        [pc: 0, pc: 5] local: this index: 0 type: X\n" +
-		"  \n" +
-		"  // Method descriptor #18 ([Ljava/lang/String;)V\n" +
-		"  // Stack: 3, Locals: 1\n" +
-		"  public static void main(java.lang.String[] args);\n" +
-		"     0  getstatic java.lang.System.out : java.io.PrintStream [19]\n" +
-		"     3  getstatic X.class$0 : java.lang.Class [25]\n" +
-		"     6  dup\n" +
-		"     7  ifnonnull 35\n" +
-		"    10  pop\n" +
-		"    11  ldc <String \"X\"> [27]\n" +
-		"    13  invokestatic java.lang.Class.forName(java.lang.String) : java.lang.Class [28]\n" +
-		"    16  dup\n" +
-		"    17  putstatic X.class$0 : java.lang.Class [25]\n" +
-		"    20  goto 35\n" +
-		"    23  new java.lang.NoClassDefFoundError [34]\n" +
-		"    26  dup_x1\n" +
-		"    27  swap\n" +
-		"    28  invokevirtual java.lang.Throwable.getMessage() : java.lang.String [36]\n" +
-		"    31  invokespecial java.lang.NoClassDefFoundError(java.lang.String) [42]\n" +
-		"    34  athrow\n" +
-		"    35  invokevirtual java.io.PrintStream.print(java.lang.Object) : void [45]\n" +
-		"    38  return\n" +
-		"      Exception Table:\n" +
-		"        [pc: 11, pc: 16] -> 23 when : java.lang.ClassNotFoundException\n" +
-		"      Line numbers:\n" +
-		"        [pc: 0, line: 3]\n" +
-		"        [pc: 38, line: 4]\n" +
-		"      Local variable table:\n" +
-		"        [pc: 0, pc: 39] local: args index: 0 type: java.lang.String[]\n" +
-		"}";
+		"""
+		// Compiled from X.java (version 1.8 : 52.0, super bit)
+		public class X {
+		 \s
+		  // Method descriptor #6 ()V
+		  // Stack: 1, Locals: 1
+		  public X();
+		    0  aload_0 [this]
+		    1  invokespecial java.lang.Object() [8]
+		    4  return
+		      Line numbers:
+		        [pc: 0, line: 1]
+		      Local variable table:
+		        [pc: 0, pc: 5] local: this index: 0 type: X
+		 \s
+		  // Method descriptor #15 ([Ljava/lang/String;)V
+		  // Stack: 2, Locals: 1
+		  public static void main(java.lang.String[] args);
+		    0  getstatic java.lang.System.out : java.io.PrintStream [16]
+		    3  ldc <Class X> [1]
+		    5  invokevirtual java.io.PrintStream.print(java.lang.Object) : void [22]
+		    8  return
+		      Line numbers:
+		        [pc: 0, line: 3]
+		        [pc: 8, line: 4]
+		      Local variable table:
+		        [pc: 0, pc: 9] local: args index: 0 type: java.lang.String[]
+		}""";
 
 	int index = actualOutput.indexOf(expectedOutput);
 	if (index == -1 || expectedOutput.length() == 0) {
@@ -3434,7 +3374,7 @@ public void test104() {
 			"	}\n" +
 			"}"
 		},
-		"class X$1$Y X$1$Y");
+		"class X$1$1$1Y X$1$1$1Y");
 }
 
 // enclosing instance - note that the behavior is different in 1.5
@@ -3462,12 +3402,7 @@ public void test105() {
 			"    void foo(Y p) { }\n" +
 			"}\n"
 		},
-		"----------\n" +
-		"1. ERROR in X.java (at line 13)\n" +
-		"	foo(p);\n" +
-		"	^^^^^^\n" +
-		"No enclosing instance of the type X is accessible in scope\n" +
-		"----------\n");
+		"");
 }
 //https://bugs.eclipse.org/bugs/show_bug.cgi?id=79798
 public void test106() {
