@@ -17,17 +17,16 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Path;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Predicate;
-
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.jdt.core.compiler.CharOperation;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileReader;
@@ -40,85 +39,49 @@ import org.eclipse.jdt.internal.compiler.env.IMultiModuleEntry;
 import org.eclipse.jdt.internal.compiler.env.NameEnvironmentAnswer;
 import org.eclipse.jdt.internal.compiler.util.JRTUtil;
 import org.eclipse.jdt.internal.compiler.util.JRTUtil.JrtFileVisitor;
-import org.eclipse.jdt.internal.compiler.util.SimpleSet;
+import org.eclipse.jdt.internal.compiler.util.JrtFileSystem;
 import org.eclipse.jdt.internal.compiler.util.SuffixConstants;
 import org.eclipse.jdt.internal.core.JavaProject;
 import org.eclipse.jdt.internal.core.util.Util;
 
 public class ClasspathJrt extends ClasspathLocation implements IMultiModuleEntry {
 
-//private HashMap<String, SimpleSet> packagesInModule = null;
-protected static Map<String, Map<String, SimpleSet>> PackageCache = new ConcurrentHashMap<>();
-protected static Map<String, Map<String, IModule>> ModulesCache = new ConcurrentHashMap<>();
-String zipFilename; // keep for equals
-File jrtFile;
+protected final static Map<String, Map<String, IModule>> modulesCache = new ConcurrentHashMap<>();
+protected final String zipFilename; // keep for equals
+protected final JrtFileSystem jrtFileSystem;
 static final Set<String> NO_LIMIT_MODULES = Collections.emptySet();
 
-/*
- * Only for use from ClasspathJrtWithReleaseOption
- */
-protected ClasspathJrt() {
+protected ClasspathJrt(String zipFilename) {
+	this.zipFilename = Objects.requireNonNull(zipFilename);
+	JrtFileSystem system = null;
+	try {
+		system = JRTUtil.getJrtSystem(new File(zipFilename), null);
+	} catch (IOException e) {
+		Util.log(e, "Failed to init packages for " + zipFilename); //$NON-NLS-1$
+	}
+	this.jrtFileSystem = system;
 }
+
 public ClasspathJrt(String zipFilename, AccessRuleSet accessRuleSet, IPath externalAnnotationPath) {
-	setZipFile(zipFilename);
+	this(zipFilename);
 	this.accessRuleSet = accessRuleSet;
 	if (externalAnnotationPath != null)
 		this.externalAnnotationPath = externalAnnotationPath.toString();
 	loadModules(this);
 }
 
-void setZipFile(String zipFilename) {
-	this.zipFilename = zipFilename;
-	if(zipFilename != null) {
-		this.jrtFile = new File(zipFilename);
-	}
-}
-
-/**
- * Calculate and cache the package list available in the zipFile.
- * @param jrt The ClasspathJar to use
- * @return A SimpleSet with the all the package names in the zipFile.
- */
-static Map<String, SimpleSet> findPackagesInModules(final ClasspathJrt jrt) {
+static Set<String> getModuleNames(final ClasspathJrt jrt) {
 	if (jrt.zipFilename == null) {
-		return Map.of();
+		return Set.of();
 	}
-	Map<String, SimpleSet> cache = PackageCache.computeIfAbsent(jrt.zipFilename, zipFileName -> {
-		final Map<String, SimpleSet> packagesInModule = new HashMap<>();
-		try {
-			JRTUtil.walkModuleImage(jrt.jrtFile, new JrtPackageVisitor(packagesInModule), JRTUtil.NOTIFY_PACKAGES | JRTUtil.NOTIFY_MODULES);
-		} catch (IOException e) {
-			Util.log(e, "Failed to init packages for " + zipFileName); //$NON-NLS-1$
-		}
-		return packagesInModule.isEmpty() ? null : Collections.unmodifiableMap(packagesInModule);
-	});
-	return cache;
-}
-
-static final class JrtPackageVisitor implements JRTUtil.JrtFileVisitor<Path> {
-	private final Map<String, SimpleSet> packagesInModule;
-	SimpleSet packageSet;
-
-	JrtPackageVisitor(Map<String, SimpleSet> packagesInModule) {
-		this.packagesInModule = packagesInModule;
+	if (modulesCache.isEmpty()) {
+		return null;
 	}
-
-	@Override
-	public FileVisitResult visitPackage(Path dir, Path mod, BasicFileAttributes attrs) throws IOException {
-		ClasspathJar.addToPackageSet(this.packageSet, dir.toString(), true);
-		return FileVisitResult.CONTINUE;
+	Map<String, IModule> modules = modulesCache.get(jrt.getKey());
+	if (modules != null) {
+		return modules.keySet();
 	}
-
-	@Override
-	public FileVisitResult visitModule(Path path, String name) throws IOException {
-		this.packageSet = new SimpleSet(41);
-		this.packageSet.add(""); //$NON-NLS-1$
-		if (name.endsWith("/")) { //$NON-NLS-1$
-			name = name.substring(0, name.length() - 1);
-		}
-		this.packagesInModule.put(name, this.packageSet);
-		return FileVisitResult.CONTINUE;
-	}
+	return null;
 }
 
 public static void loadModules(final ClasspathJrt jrt) {
@@ -126,21 +89,20 @@ public static void loadModules(final ClasspathJrt jrt) {
 	if (jrtKey == null) {
 		return;
 	}
-	ModulesCache.computeIfAbsent(jrtKey, key -> {
+	modulesCache.computeIfAbsent(jrtKey, key -> {
 		Map<String, IModule> newCache = new HashMap<>();
 		try {
-			final File imageFile = jrt.jrtFile;
-			JRTUtil.walkModuleImage(imageFile, new JrtFileVisitor<Path>() {
+			JRTUtil.walkModuleImage(jrt.jrtFileSystem, new JrtFileVisitor<Path>() {
 				@Override
 				public FileVisitResult visitModule(Path path, String name) throws IOException {
-					jrt.acceptModule(JRTUtil.getClassfileContent(imageFile, IModule.MODULE_INFO_CLASS, name), name,	newCache);
+					jrt.acceptModule(JRTUtil.getClassfileContent(jrt.jrtFileSystem, IModule.MODULE_INFO_CLASS, name), name,	newCache);
 					return FileVisitResult.SKIP_SUBTREE;
 				}
 			}, JRTUtil.NOTIFY_MODULES);
 		} catch (IOException e) {
 			Util.log(e, "Failed to init packages for " + jrt); //$NON-NLS-1$
 		}
-		return newCache.isEmpty() ? null : Collections.unmodifiableMap(newCache);
+		return newCache.isEmpty() ? null : Map.copyOf(newCache);
 	});
 }
 
@@ -188,16 +150,23 @@ public boolean equals(Object o) {
 @Override
 public NameEnvironmentAnswer findClass(String binaryFileName, String qualifiedPackageName, String moduleName, String qualifiedBinaryFileName,
 										boolean asBinaryOnly, Predicate<String> moduleNameFilter) {
-	if (!isPackage(qualifiedPackageName, moduleName)) return null; // most common case
+	if (!isPackage(qualifiedPackageName, moduleName)) {
+		return null; // most common case
+	}
 
 	try {
 		String fileNameWithoutExtension = qualifiedBinaryFileName.substring(0, qualifiedBinaryFileName.length() - SuffixConstants.SUFFIX_CLASS.length);
-		IBinaryType reader = ClassFileReader.readFromModule(this.jrtFile, moduleName, qualifiedBinaryFileName, moduleNameFilter);
-		if (reader != null)
-			return createAnswer(fileNameWithoutExtension, reader, reader.getModule());
+		if (this.jrtFileSystem == null) {
+			return null;
+		}
+		IBinaryType reader = JRTUtil.getClassfile(this.jrtFileSystem, qualifiedBinaryFileName, moduleName, moduleNameFilter);
+		if (reader == null) {
+			return null;
+		}
+		return createAnswer(fileNameWithoutExtension, reader, reader.getModule());
 	} catch (ClassFormatException | IOException e) { // treat as if class file is missing
+		return null;
 	}
-	return null;
 }
 @Override
 public IPath getProjectRelativePath() {
@@ -210,16 +179,16 @@ public int hashCode() {
 }
 @Override
 public char[][] getModulesDeclaringPackage(String qualifiedPackageName, String moduleName) {
-	List<String> moduleNames = JRTUtil.getModulesDeclaringPackage(this.jrtFile, qualifiedPackageName, moduleName);
+	List<String> moduleNames = JRTUtil.getModulesDeclaringPackage(this.jrtFileSystem, qualifiedPackageName, moduleName);
 	return CharOperation.toCharArrays(moduleNames);
 }
 @Override
 public boolean hasCompilationUnit(String qualifiedPackageName, String moduleName) {
-	return JRTUtil.hasCompilationUnit(this.jrtFile, qualifiedPackageName, moduleName);
+	return JRTUtil.hasCompilationUnit(this.jrtFileSystem, qualifiedPackageName, moduleName);
 }
 @Override
 public boolean isPackage(String qualifiedPackageName, String moduleName) {
-	return JRTUtil.getModulesDeclaringPackage(this.jrtFile, qualifiedPackageName, moduleName) != null;
+	return JRTUtil.getModulesDeclaringPackage(this.jrtFileSystem, qualifiedPackageName, moduleName) != null;
 }
 
 @Override
@@ -250,7 +219,7 @@ public IModule getModule(String moduleName) {
 	if (!hasModule()) {
 		return null;
 	}
-	Map<String, IModule> modules = ModulesCache.get(getKey());
+	Map<String, IModule> modules = modulesCache.get(getKey());
 	if (modules != null) {
 		return modules.get(moduleName);
 	}
@@ -258,9 +227,9 @@ public IModule getModule(String moduleName) {
 }
 @Override
 public Collection<String> getModuleNames(Collection<String> limitModules) {
-	Map<String, SimpleSet> cache = findPackagesInModules(this);
+	Set<String> cache = getModuleNames(this);
 	if (cache != null)
-		return selectModules(cache.keySet(), limitModules);
+		return selectModules(cache, limitModules);
 	return Collections.emptyList();
 }
 
@@ -302,7 +271,6 @@ public NameEnvironmentAnswer findClass(String typeName, String qualifiedPackageN
 }
 /** TEST ONLY */
 public static void resetCaches() {
-	PackageCache.clear();
-	ModulesCache.clear();
+	modulesCache.clear();
 }
 }
